fixing bugs...